--- a/week2homework/Gemfile
+++ b/week2homework/Gemfile
@@ -3,7 +3,9 @@ source :rubygems
 gem 'rake'
 
 group :development do
-  gem 'guard'
-  gem 'guard-rspec'
   gem 'rspec'
+  gem 'rspec-nc'
+  gem 'autotest'
+  gem 'autotest-fsevent'
+  gem 'terminal-notifier'
 end
