--- a/week3homework/Gemfile
+++ b/week3homework/Gemfile
@@ -8,4 +8,8 @@ group :development do
   gem 'rspec'
   gem 'ruby_gntp'
   gem 'rb-fsevent', '~> 0.9.1'
+  gem 'autotest'
+  gem 'autotest-fsevent'
+  gem 'terminal-notifier'
+
 end
