Initial Employee class

--- a/week4homework/Gemfile
+++ b/week4homework/Gemfile
@@ -4,6 +4,6 @@ group :development do
   gem 'guard'
   gem 'guard-rspec'
   gem 'rspec'
-  gem 'ruby_gntp'
   gem 'rb-fsevent', '~> 0.9.1'
+  gem 'terminal-notifier-guard'
 end
